--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "slim/slim": "^4.4",
         "slim/psr7": "^1.0",
         "tuupola/slim-basic-auth": "^3.2",
-        "fzaninotto/faker": "^1.9",
-        "doctrine/orm": "^2.7"
+        "fzaninotto/faker": "^1.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
