--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
     "require": {
         "ext-pdo": "*",
-        "ext-pdo_sqlite": "*",
+        "ext-mbstring": "*",
         "php": ">=7.3",
         "symfony/process": "^5.0",
         "slim/slim": "^4.4",
@@ -22,6 +22,7 @@
         "doctrine/orm": "^2.9.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "ext-pdo_sqlite": "*"
     }
 }
