--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "slim/psr7": "^1.0",
         "tuupola/slim-basic-auth": "^3.2",
         "fzaninotto/faker": "^1.9",
-        "doctrine/orm": "^2.9.2"
+        "doctrine/orm": "^2.9.2",
+        "symfony/cache": "^5.3",
+        "doctrine/annotations": "^1.13"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
