--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -39,3 +39,9 @@ jobs:
 
     - name: Run project tests
       run: vendor/bin/phpunit
+    
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v2
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/testresults/junit.xml'
