--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 7.4
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -34,3 +39,9 @@ jobs:
 
     - name: Run project tests
       run: vendor/bin/phpunit
+    
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v2
+      if: always() # always run even if the previous step fails
+      with:
+        report_paths: '**/testresults/junit.xml'
